--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <div id="header">
             <h1>Today is Dayo's birthday 🎉</h1>
-            <img id="bff-img" src="images/nick.jpg">
+            <img id="bff-img" src="https://i1.sndcdn.com/artworks-92IPKY4dVuvjtsDd-AqDLoA-t500x500.jpg">
             <h2 id="bday-age">24 years old</h2>
-            <h4 id="bday-date">01.11.2022</h4>
+            <h4 id="bday-date">06.10.2023</h4>
         </div>
         
         <div class="gift-section">
